# EVENTED

./: .gitignore  Makefile  README.md  docker-compose.yml  mongo-init.js
config/: database.yml  logging.yml
docker/: service.Dockerfile
docs/: architecture.md  monorepo-specs.md
libs/common-parser/: README.md  pyproject.toml
libs/common-utils/: README.md  pyproject.toml
libs/common-utils/common_utils/: celery.py  codenrock.py  config.py  database.py  logging.py
libs/common-utils/common_utils/config/: base.py
libs/common-utils/common_utils/models/: event.py
libs/database-utils/: README.md  pyproject.toml
libs/message-broker/: README.md  pyproject.toml
services/api/: app.py  entrypoint.sh  pyproject.toml
services/api/api/routers/: event.py
services/database/: README.md  app.py  entrypoint.sh  pyproject.toml  run.py
services/database/database/: config.py  mongo.py  tasks.py
services/event-manager/: README.md  pyproject.toml
services/parsers/: README.md
services/parsers/codenrock/: entrypoint.sh  parser.py  pyproject.toml
services/parsers/hackathons.rf/: parser.py
services/telegram-bot/: app.py  pyproject.toml
services/telegram-bot/telegram_bot/: __init__.py  config.py
services/telegram-bot/telegram_bot/handlers/: events.py  search.py  start.py  subscribe.py
services/telegram-bot/telegram_bot/routers/: start.py
