[tool.poetry]
name = "common-utils"
version = "0.1.0"
description = ""
authors = ["d0gied <german.n.u@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"
loguru = "^0.7.2"
pydantic = "^2.5"
pydantic-settings = "^2.2.1"
celery = { version = "^5.3.6" }
redis = "^5.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
