[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["d0gied <german.n.u@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["all"], version = "^0.110.0" }
common-utils = { path = "../../libs/common-utils", develop = false }
uvicorn = { extras = ["standard"], version = "^0.28.0" }
celery = "^5.3.6"
redis = "^5.0.3"

[tool.poetry.dev-dependencies]
common-utils = { path = "../../libs/common-utils", develop = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
