[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = "Telegram bot"
authors = ["d0gied <german.n.u@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
common-utils = { path = "../../libs/common-utils", develop = false }
aiogram = "^3.4.1"

[tool.poetry.dev-dependencies]
common-utils = { path = "../../libs/common-utils", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
